--- a/03 Arte Moderno/style.css
+++ b/03 Arte Moderno/style.css
@@ -5,7 +5,7 @@
 }
 .container{
     display: flex;
-    background-color: black;
+    background-color: ;
     width: 800px;
     margin: auto;
     border: solid 30px grey;
